<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_project">

    <activity
        android:id="@+id/nav_signIn"
        android:name="com.project.ksih_android.ui.AuthActivity"
        android:label="Sign In"
        tools:layout="@layout/fragment_login"/>

    <fragment
        android:id="@+id/navigation_project"
        android:name="com.project.ksih_android.ui.project.ProjectFragment"
        android:label="@string/title_project"
        tools:layout="@layout/fragment_project" />

    <fragment
        android:id="@+id/navigation_member"
        android:name="com.project.ksih_android.ui.member.MemberFragment"
        android:label="@string/title_members"
        tools:layout="@layout/fragment_member" />

    <fragment
        android:id="@+id/navigation_startup"
        android:name="com.project.ksih_android.ui.startup.StartupFragment"
        android:label="@string/title_startups"
        tools:layout="@layout/fragment_startup" >
        <action
            android:id="@+id/action_navigation_startup_to_addStartUpFragment"
            app:destination="@id/addStartUpFragment" />
        <action
            android:id="@+id/action_navigation_startup_to_startUpDetailsFragment"
            app:destination="@id/startUpDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_event"
        android:name="com.project.ksih_android.ui.events.EventFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_event">
        <action
            android:id="@+id/action_navigation_event_to_eventAddFragment"
            app:destination="@id/eventAddFragment" />
        <action
            android:id="@+id/action_navigation_event_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_chats"
        android:name="com.project.ksih_android.ui.chat.ChatFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_chat"/>

    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="com.project.ksih_android.ui.onBoarding.OnBoardingFragment"
        android:label="fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding" />

    <fragment
        android:id="@+id/ksih_rules"
        android:name="com.project.ksih_android.ui.ksihrules.KSIHRules"
        android:label="KSIH Rules"
        tools:layout="@layout/fragment_ksihrules" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.project.ksih_android.ui.others.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/addStartUpFragment"
        android:name="com.project.ksih_android.ui.startup.AddStartUpFragment"
        android:label="Add Startup"
        tools:layout="@layout/fragment_add_start_up" />
    <fragment
        android:id="@+id/startUpDetailsFragment"
        android:name="com.project.ksih_android.ui.startup.StartUpDetailsFragment"
        android:label="fragment_start_up_details"
        tools:layout="@layout/fragment_start_up_details" />
    <fragment
        android:id="@+id/eventAddFragment"
        android:name="com.project.ksih_android.ui.events.EventAddFragment"
        android:label="fragment_event_add"
        tools:layout="@layout/fragment_event_add">
        <action
            android:id="@+id/action_eventAddFragment_to_navigation_event"
            app:destination="@id/navigation_event" />
    </fragment>
    <fragment
        android:id="@+id/eventDetailsFragment"
        android:name="com.project.ksih_android.ui.events.EventDetailsFragment"
        android:label="fragment_event_details"
        tools:layout="@layout/fragment_event_details">
        <action
            android:id="@+id/action_eventDetailsFragment_to_navigation_event"
            app:destination="@id/navigation_event" />
    </fragment>

</navigation>